--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:x4mwe2TlhgXPUbzGAgnD2MkJ5duC+nkPjCAG3bkdVEg=
 APP_DEBUG=true
 APP_URL=https://metro-test-on-heroku.herokuapp.com/
+ASSET_URL=https://metro-test-on-heroku.herokuapp.com/
 
 LOG_CHANNEL=stack
 
