--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=MetroTransit
 APP_ENV=local
 APP_KEY=base64:x4mwe2TlhgXPUbzGAgnD2MkJ5duC+nkPjCAG3bkdVEg=
 APP_DEBUG=true
-APP_URL=http://metros.test
+APP_URL=https://metro-test-on-heroku.herokuapp.com/
+ASSET_URL=https://metro-test-on-heroku.herokuapp.com/
 
 LOG_CHANNEL=stack
 
